--- a/homeworks/week6/hw2/index.html
+++ b/homeworks/week6/hw2/index.html
@@ -60,7 +60,7 @@
                 <div class='reply'><input type='suggestion' value='您的回答' /></>
             </div>
         </form>
-        <div class='submit'>提交</div>
+        <input type='submit' id='submit' value='提交' />
         <div class='form__bottom'>請勿透過表單送出您的密碼。</div>
     </div>
     <footer>© 2020 © Copyright. All rights Reserved.</footer>
