--- a/homeworks/week8/hw1/index.html
+++ b/homeworks/week8/hw1/index.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
     
-    <div class='bg'>
+    <div class='card'>
         <div class='prize'>
             <div class='prize__content'>
                 <h2>2020 夏日輕盈特賞！ 抽獎活動辦法</h2>
@@ -58,7 +58,7 @@
                 </div>
                 <hr />
             </div>
-            <button class='submit' >我要抽獎</button>
+            <button class='button' >我要抽獎</button>
         </div>
     </div>
 
