--- a/homeworks/week7/hw3/index.html
+++ b/homeworks/week7/hw3/index.html
@@ -17,10 +17,11 @@
             To-Do List
         </h1>
         <div class="list">
-            <input class="list__content" id="list__content" value="write something..."/> 
+            <input class="list__content" id="list__content" placeholder="write something..."/> 
             <button class="list__add"></button>
         </div>
-
+        <div class="to-do-things">
+        </div>
     </div>
     <script src="week7hw3.js"></script>
 </body>
